updated accordian features.

--- a/index.html
+++ b/index.html
@@ -100,36 +100,54 @@
 								<section class="5grid is-gallery">
 									<div class="row">
 										<div class="4u">
-											<a href="javascript:toggleDiv('one');"><img src="images/1.jpg" alt=""></a>
-											<div id="one">This is magic!</div>
-
+ 											<div class="accordion">
+                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
+                  								<div>
+                    							This is magic!
+                  								</div>
+                							</div>
 										</div>
 										<div class="4u">
-											<a href="javascript:toggleDiv('two');"><img src="images/1.jpg" alt=""></a>
-											<div id="two">Look at me go!</div>
-
+ 											<div class="accordion">
+                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
+                  								<div>
+                    							This is even more magic!
+                  								</div>
+                							</div>
 										</div>
 										<div class="4u">
-											<a href="javascript:toggleDiv('three');"><img src="images/1.jpg" alt=""></a>
-											<div id="three">You can make sentences as long as you need to.</div>
-
+ 											<div class="accordion">
+                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
+                  								<div>
+                    							This is Diana's better accordian!
+                  								</div>
+                							</div>
 										</div>
 									</div>
 									<div class="row">
 										<div class="4u">
-											<a href="javascript:toggleDiv('four');"><img src="images/1.jpg" alt=""></a>
-											<div id="four">Let's talk about how awesome your girlfriend may be.</div>
-
+ 											<div class="accordion">
+                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
+                  								<div>
+                    							This is for you to create awesomeness!
+                  								</div>
+                							</div>
 										</div>
 										<div class="4u">
-											<a href="javascript:toggleDiv('five');"><img src="images/1.jpg" alt=""></a>
-											<div id="five">My hair is brown. You hair is blonde.</div>
-
+ 											<div class="accordion">
+                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
+                  								<div>
+                    							This is Christopher's page!
+                  								</div>
+                							</div>
 										</div>
 										<div class="4u">
-											<a href="javascript:toggleDiv('six');"><img src="images/1.jpg" alt=""></a>
-											<div id="six">Diana and Chris!</div>
-
+ 											<div class="accordion">
+                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
+                  								<div>
+                    							This is my gift to you!
+                  								</div>
+                							</div>
 										</div>
 									</div>
 								</section>
@@ -138,7 +156,10 @@
 						<!-- Email -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Email Me</h2>
+									<h2>Get in touch!</h2>
+          							<span>
+            						Refer to my <a href="#">résumé</a>,
+            						<a href="#">curriculum vitæ</a>, or the following form:<br>
 								</header>
 								<form action="#" method="post">
 									<div class="5grid">
