--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<a href="#work" class="icon icon-tilemenu"><span>Portfolio</span></a>
 						<a href="#contact" class="icon icon-mail"><span>Contact Me</span></a>
 						<a href="http://www.linkedin.com/pub/christopher-dean/5a/17a/920" target="_blank" class="icon icon-linkedin"><span>LinkedIn</span></a>
-					</nav>
+    </nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -87,7 +87,7 @@
 									<span class="jumplink arrow icon icon-right"><span>See my work</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
-							</article>
+						  </article>
 
 						<!-- Work; this is where you'll put all your portfolio stuff --> 
 							<article id="work" class="panel">
@@ -101,10 +101,10 @@
 									<div class="row">
 										<div class="4u">
  											<div class="accordion">
-                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
-                  								<div>
-                    							This is magic!
-                  								</div>
+                  							<a class="dropdown" href="#">
+                  								
+                                                  <iframe src="http://player.vimeo.com/video/23852773" width="500" height="375" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> <p><a href="http://vimeo.com/23852773">Unbearable</a> from <a href="http://vimeo.com/user4552882">Christopher Dean</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+                  								</a></div><div>
                 							</div>
 										</div>
 										<div class="4u">
