--- a/index.html
+++ b/index.html
@@ -110,10 +110,8 @@
 										
 										<div class="4u">
  											<div class="accordion">
-                  							<a class="dropdown" href="#"><img src="images/1.jpg" alt=""></a>
-                  								<div>
-                    							This is Diana's better accordian!
-                  								</div>
+                  							<a class="dropdown" href="#"><iframe src="http://player.vimeo.com/video/17346698" width="250" height="141" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> <p><a href="http://vimeo.com/17346698">Monsoon at Rocco's, 3D, HD</a> from <a href="http://vimeo.com/user4552882">Christopher Dean</a> on <a href="http://vimeo.com">Vimeo</a>.</p></a>
+                  								
                 							</div>
 										</div>
 									</div>
