--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ img:hover {
         </div>
         <div class="row">
           <div class="4u">
-            <div class="accordion"> 
+            <div class="accordion"> <a class="dropdown" href="#">
               <div> <h4>Applet <span style="font-weight:normal;">/ </span></h4>
 			<iframe class="well" style="width: 100%; height: 600px;" src="/assign4Inherit/applet/index.html"></iframe></div>
             </div>
