--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@ img:hover {
         <div class="row">
           <div class="8u">
             <div class="accordion"> <a class="dropdown" href="#">
-              <iframe src="http://player.vimeo.com/video/23852773" width="500" height="375" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-              <p><a href="http://vimeo.com/23852773">Unbearable</a> from <a href="http://vimeo.com/user4552882">Christopher Dean</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+            <iframe src="http://player.vimeo.com/video/23852773?portrait=0" width="250" height="188" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
               </a></div>
             <div> </div>
           </div>
           <div class="4u">
             <div class="accordion"> <a class="dropdown" href="#">
-              <iframe src="http://player.vimeo.com/video/17346698" width="250" height="141" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-              <p><a href="http://vimeo.com/17346698">Monsoon at Rocco's, 3D, HD</a> from <a href="http://vimeo.com/user4552882">Christopher Dean</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+            <iframe src="http://player.vimeo.com/video/17346698?portrait=0" width="250" height="141" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            <iframe src="http://player.vimeo.com/video/23077337?portrait=0" width="250" height="188" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
               </a> </div>
+              
           </div>
         </div>
         <div class="row">
