Signed-off-by: christopherJosephDean@gmail.com <christopherJosephDean@gmail.com>

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ img:hover {
          
           <div class="4u">
             <div>
-                <div class="accordion"> <a class="dropdown" href="#">   <iframe width="250" height="188" src="http://www.youtube.com/embed/kEfXTwa3n9E" frameborder="0" allowfullscreen></iframe></a>
+                <div class="accordion"> <a class="dropdown" href="#"> <iframe src="http://player.vimeo.com/video/37167149?title=0&amp;byline=0&amp;portrait=0" width="250" height="188" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></a>
                 <div>
               This model was created procedurally from motion capture data, taken while I was Yo-yo-ing. 
                 </div>
