Signed-off-by: christopherJosephDean@gmail.com <christopherJosephDean@gmail.com>

--- a/index.html
+++ b/index.html
@@ -139,14 +139,15 @@ img:hover {
         
          <div class="row">
            <div class="12u">
-         <iframe src="http://player.vimeo.com/video/16282639?title=0&amp;byline=0&amp;portrait=0" width="750" height="564" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+         <iframe src="http://player.vimeo.com/video/16282639?title=0&amp;byline=0&amp;portrait=0" width="750" height="564" frameborder="0"  webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
          </div>
          </div>
       </section>
       <h4>Applet <span style="font-weight:normal;">  </h4>
-                <iframe width = "360" height= "550" frameborder="0" src="/assign4Inherit/applet/index.html"></iframe>
+                <iframe width = "360" height= "550" frameborder="0" seamless marginheight="0" marginwidth="0" src="/assign4Inherit/applet/index.html"></iframe>
     </article>
     <!-- Email -->
+    
     <article id="contact" class="panel">
     <header>
     <h2>Get in touch!</h2>
