Signed-off-by: christopherJosephDean@gmail.com <christopherJosephDean@gmail.com>

--- a/index.html
+++ b/index.html
@@ -192,21 +192,21 @@ img:hover {
   <div class="row">
     <div class="4u">
       <div>
-        <div class="accordion"> <a class="dropdown" href="#"> <img src="elf/dollhouse.jpg" width="250" height="250"> </a>
+        <div class="accordion"> <a class="dropdown" href="#"> <img src="images/elf.jpg" width="250" height="220"> </a>
           <div> Elf head, modeled in maya. Custom shader  </div>
         </div>
       </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"> <img src="images/headphones.jpg" width="250" height="250"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"> <img src="images/headphones.jpg" width="250" height="210"> </a>
             <div> Modeled in rhino, textured in keyshot, post in Photoshop </div>
           </div>
         </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"> <img src="images/bed.jpg" width="250" height="250"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"> <img src="images/bed.jpg" width="250" height="210"> </a>
             <div> "Dream Vortex". Lasercut masonite. Model in Rhino converted to connected 2d planes. Glows in the dark!</div>
           </div>
         </div>
