--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ img:hover {
   </div>
   <div class="row">
     <div class="4u">
-      <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/remote.jpg"> <img src="images/remote-thumb.jpg" width="250" height="400"> </a> </div> "Fancy Remote" Modeled in Rhino </div>
+      <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/remote.jpg" target="_blank"> <img src="images/remote-thumb.jpg" width="250" height="400"> </a> </div> "Fancy Remote" Modeled in Rhino </div>
      
     <div class="8u">
       <div class="accordion"> <a class="dropdown" href="#">
@@ -142,21 +142,21 @@ img:hover {
   <div class="row">
     <div class="4u">
       <div>
-        <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/brush.jpg"><img src="images/brush-thumb.jpg" width="250" height="340"> </a>
+        <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/brush.jpg" target="_blank"><img src="images/brush-thumb.jpg" width="250" height="340"> </a>
           <div> Modeled in Rhino, Textured in keyshot </div>
         </div>
       </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"><a href = "images/chairs.jpg"> <img src="images/chairs-thumb.jpg" width="250" height="340"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"><a href = "images/chairs.jpg" target="_blank"> <img src="images/chairs-thumb.jpg" width="250" height="340"> </a>
             <div> Modeled in rhino, textured in keyshot </div>
           </div>
         </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/rings.jpg"><img src="images/rings-thumb.jpg" width="250" height="340"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/rings.jpg" target="_blank"><img src="images/rings-thumb.jpg" width="250" height="340"> </a>
             <div> Modeling and shader network created in Maya</div>
           </div>
         </div>
@@ -167,21 +167,21 @@ img:hover {
   <div class="row">
     <div class="4u">
       <div>
-        <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/dollhouse.jpg"><img src="images/dollhouse-thumb.jpg" width="250" height="190"> </a>
+        <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/dollhouse.jpg" target="_blank"><img src="images/dollhouse-thumb.jpg" width="250" height="190"> </a>
           <div> Interactive dollhouse made from lasercut acryllic. House would light up based on Arduino sensory input</div>
         </div>
       </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"><a href = "images/fence.jpg"> <img src="images/fence-thumb.jpg" width="250" height="190"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"><a href = "images/fence.jpg" target="_blank"> <img src="images/fence-thumb.jpg" width="250" height="190"> </a>
             <div> Dollhouse fences (see left). Lasercut acryllic. Model taken from a LIDAR 3d scan of a campus building and converted to 3d mesh </div>
           </div>
         </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/exoegg.jpg"><img src="images/exoegg-thumb.jpg" width="250" height="190"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/exoegg.jpg" target="_blank"><img src="images/exoegg-thumb.jpg" width="250" height="190"> </a>
             <div> 3D printed sculpture. Designed in rhino, hollow. displayed at Tempe History Museum in 2012</div>
           </div>
         </div>
@@ -192,21 +192,21 @@ img:hover {
   <div class="row">
     <div class="4u">
       <div>
-        <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/elf.jpg"><img src="images/elf-thumb.jpg" width="250" height="190"> </a>
+        <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/elf.jpg" target="_blank"><img src="images/elf-thumb.jpg" width="250" height="190"> </a>
           <div> Elf head, modeled in maya. Custom shader  </div>
         </div>
       </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/headphones.jpg"><img src="images/headphones-thumb.jpg" width="250" height="190"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/headphones.jpg" target="_blank"><img src="images/headphones-thumb.jpg" width="250" height="190"> </a>
             <div> Modeled in rhino, textured in keyshot, post in Photoshop </div>
           </div>
         </div>
       </div>
       <div class="4u">
         <div>
-          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/bed.jpg"><img src="images/bed-thumb.jpg" width="250" height="190"> </a>
+          <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/bed.jpg" target="_blank"><img src="images/bed-thumb.jpg" width="250" height="190"> </a>
             <div> "Dream Vortex". Lasercut masonite. Model in Rhino converted to connected 2d planes. Glows in the dark!</div>
           </div>
         </div>
