--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <header>
     <h2>Get in touch</h2>
     <br>
-      <span> Refer to my <a href="files/ChrisDean_CV">résumé</a> and <a href="files/ChrisDean_CV">curriculum vitæ</a>.
+      <span> Refer to my <a href="files/ChrisDean_CV.pdf">résumé</a> and <a href="files/ChrisDean_CV.pdf">curriculum vitæ</a>.
       <br>E-mail me at christopherjosephdean [at] gmail [dot] com
       <br> 
     </header>
