optimizing load times

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <link rel="stylesheet" href="css/noscript.css" />
     </noscript>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/modernizr.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js" defer="defer"></script>
+    <script type="text/javascript" src="js/config.js" defer="defer"></script>
+    <script type="text/javascript" src="js/skel.min.js" defer="defer"></script>
+    <script type="text/javascript" src="js/modernizr.js" defer="defer"></script>
 
     <style>
         img 
@@ -142,7 +142,7 @@
             </div>
           </div>
         </div>
-        <!---4th row ---->
+        <!---4th row -->
         <div class="row">
           <div class="4u">
             <div>
@@ -166,7 +166,7 @@
             </div>
           </div>
         </div>
-        <!---5th row ---->
+        <!---5th row -->
         <div class="row">
           <div class="4u">
             <div>
@@ -190,7 +190,7 @@
             </div>
           </div>
         </div>
-        <!---6th row ---->
+        <!---6th row -->
         <div class="row">
           <div class="4u">
             <div>
@@ -214,7 +214,7 @@
             </div>
           </div>
         </div>
-        <!--7th row ---->
+        <!--7th row -->
         <div class="row">
           <div class="4u">
             <div>
@@ -238,7 +238,7 @@
             </div>
           </div>
         </div>
-        <!--8th row ---->
+        <!--8th row -->
         <div class="row">
           <div class="8u">
             <div>
@@ -261,8 +261,8 @@
           </div>
         </div>
       </section>
-      <h4>Applet <span style="font-weight:normal;"> </h4>
-      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe>
+    <!--  <h4>Applet <span style="font-weight:normal;"> </h4>
+      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe>-->
     </article>
     <!-- Email -->
     <article id="contact" class="panel">
