optimizing load times

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <link rel="stylesheet" href="css/noscript.css" />
     </noscript>
 
-    <script type="text/javascript" src="js/jquery.min.js" defer="defer"></script>
-    <script type="text/javascript" src="js/config.js" defer="defer"></script>
-    <script type="text/javascript" src="js/skel.min.js" defer="defer"></script>
-    <script type="text/javascript" src="js/modernizr.js" defer="defer"></script>
+    <script type="text/javascript" src="js/jquery.min.js" ></script>
+    <script type="text/javascript" src="js/config.js" ></script>
+    <script type="text/javascript" src="js/skel.min.js" ></script>
+    <script type="text/javascript" src="js/modernizr.js" ></script>
 
     <style>
         img 
@@ -242,11 +242,11 @@
         <div class="row">
           <div class="8u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#">
+              <!-- <div class="accordion"> <a class="dropdown" href="#">
                 <iframe src="http://prezi.com/embed/rx0qcou7texl/?bgcolor=ffffff&amp;lock_to_path=1&amp;autoplay=0&amp;autohide_ctrls=0&amp;features=undefined&amp;disabled_features=undefined" width="520" height="440" frameBorder="0"></iframe>
                 </a>
                 <div> X-square project. Several design students and I teamed up to design a structure to fill an outdoor space at the ASU campus. I did the logo animation, graphic design, and several renders, as well as helped with structure design. </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="4u">
