--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
           </div>
         </div>
       </section>
-    <!--  <h4>Applet <span style="font-weight:normal;"> </h4>
-      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe>-->
+      <h4>Applet <span style="font-weight:normal;"> </h4>
+      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe>
     </article>
     <!-- Email -->
     <article id="contact" class="panel">
