optimizing load times

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <noscript>
-      <link rel="stylesheet" href="css/skel-noscript.css" />
-      <link rel="stylesheet" href="css/style.css" />
-      <link rel="stylesheet" href="css/style-desktop.css" />
-      <link rel="stylesheet" href="css/noscript.css" />
+      <link type="text/css" rel="stylesheet" href="css/skel-noscript.css" />
+      <link type="text/css" rel="stylesheet" href="css/style.css" />
+      <link type="text/css" rel="stylesheet" href="css/style-desktop.css" />
+      <link type="text/css" rel="stylesheet" href="css/noscript.css" />
     </noscript>
 
-    <script type="text/javascript" src="js/jquery.min.js" ></script>
-    <script type="text/javascript" src="js/config.js" ></script>
-    <script type="text/javascript" src="js/skel.min.js" ></script>
-    <script type="text/javascript" src="js/modernizr.js" ></script>
+    <script type="text/javascript" src="js/jquery.min.js" defer></script>
+    <script type="text/javascript" src="js/config.js" defer></script>
+    <script type="text/javascript" src="js/skel.min.js" defer></script>
+    <script type="text/javascript" src="js/modernizr.js" defer></script>
 
     <style>
         img 
@@ -128,7 +128,7 @@
         </div>
         <div class="row">
           <div class="4u">
-            <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/remote.jpg" target="_blank"> <img src="images/remote-thumb.jpg" width="250" height="400"> </a> 
+            <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/remote.jpg" target="_blank"> <img type="image/jpeg" src="images/remote-thumb.jpg" width="250" height="400"> </a> 
                 <div>
                 "Fancy Remote" Modeled in Rhino </div>
             
@@ -146,21 +146,21 @@
         <div class="row">
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/brush.jpg" target="_blank"><img src="images/brush-thumb.jpg" width="250" height="340"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/brush.jpg" target="_blank"><img type="image/jpeg" src="images/brush-thumb.jpg" width="250" height="340"> </a>
                 <div> Modeled in Rhino, Textured in keyshot </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"><a href = "images/chairs.jpg" target="_blank"> <img src="images/chairs-thumb.jpg" width="250" height="340"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"><a href = "images/chairs.jpg" target="_blank"> <img type="image/jpeg" src="images/chairs-thumb.jpg" width="250" height="340"> </a>
                 <div> Modeled in rhino, textured in keyshot </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/rings.jpg" target="_blank"><img src="images/rings-thumb.jpg" width="250" height="340"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/rings.jpg" target="_blank"><img type="image/jpeg" src="images/rings-thumb.jpg" width="250" height="340"> </a>
                 <div> Modeling and shader network created in Maya</div>
               </div>
             </div>
@@ -170,21 +170,21 @@
         <div class="row">
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/dollhouse.jpg" target="_blank"><img src="images/dollhouse-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/dollhouse.jpg" target="_blank"><img type="image/jpeg" src="images/dollhouse-thumb.jpg" width="250" height="190"> </a>
                 <div> Interactive dollhouse made from lasercut acryllic. House would light up based on Arduino sensory input</div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"><a href = "images/fence.jpg" target="_blank"> <img src="images/fence-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"><a href = "images/fence.jpg" target="_blank"> <img type="image/jpeg" src="images/fence-thumb.jpg" width="250" height="190"> </a>
                 <div> Dollhouse fences (see left). Lasercut acryllic. Model taken from a LIDAR 3d scan of a campus building and converted to 3d mesh </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/exoegg.jpg" target="_blank"><img src="images/exoegg-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/exoegg.jpg" target="_blank"><img type="image/jpeg" src="images/exoegg-thumb.jpg" width="250" height="190"> </a>
                 <div> 3D printed sculpture. Designed in rhino, hollow. displayed at Tempe History Museum in 2012</div>
               </div>
             </div>
@@ -194,21 +194,21 @@
         <div class="row">
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/elf.jpg" target="_blank"><img src="images/elf-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/elf.jpg" target="_blank"><img type="image/jpeg" src="images/elf-thumb.jpg" width="250" height="190"> </a>
                 <div> Elf head, modeled in maya. Custom shader </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/headphones.jpg" target="_blank"><img src="images/headphones-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/headphones.jpg" target="_blank"><img type="image/jpeg" src="images/headphones-thumb.jpg" width="250" height="190"> </a>
                 <div> Modeled in rhino, textured in keyshot, post in Photoshop </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/bed.jpg" target="_blank"><img src="images/bed-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/bed.jpg" target="_blank"><img type="image/jpeg" src="images/bed-thumb.jpg" width="250" height="190"> </a>
                 <div> "Dream Vortex". Lasercut masonite. Model in Rhino converted to connected 2d planes. Glows in the dark!</div>
               </div>
             </div>
@@ -218,21 +218,21 @@
         <div class="row">
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/house.jpg" target="_blank"><img src="images/house-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/house.jpg" target="_blank"><img type="image/jpeg" src="images/house-thumb.jpg" width="250" height="190"> </a>
                 <div> 3d house, inserted into background image in post. Maya, Photoshop </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mage.jpg" target="_blank"><img src="images/mage-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mage.jpg" target="_blank"><img type="image/jpeg" src="images/mage-thumb.jpg" width="250" height="190"> </a>
                 <div> Graphic and logo I created for Men Advocating Gender Equality, a social justice group. </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/sun.jpg" target="_blank"><img src="images/sun-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/sun.jpg" target="_blank"><img type="image/jpeg" src="images/sun-thumb.jpg" width="250" height="190"> </a>
                 <div> Images I created for a ham radio magazine article on the ionosphere. Top graphic located in March of 2013 ed of QRP Quarterly, pp 17-18. </div>
               </div>
             </div>
@@ -251,10 +251,10 @@
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mirror.jpg" target="_blank"><img src="images/mirror-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mirror.jpg" target="_blank"><img type="image/jpeg" src="images/mirror-thumb.jpg" width="250" height="190"> </a>
                 <div> Light and Mirrors game. Interactive game projected onto the floor. Students can move mirros via motion capture to learn about light physics. </div>
                 </a></div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mystery.jpg" target="_blank"><img src="images/mystery-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mystery.jpg" target="_blank"><img type="image/jpeg" src="images/mystery-thumb.jpg" width="250" height="190"> </a>
                 <div> Interactive Murdery Mystery. Objects in the scene could be scanned into the computer, which then played an animation from that item's past as clues to solve the murder! Click here to see more about the project (under construction) </div>
               </div>
             </div>
