corrected spelling errors

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div class="accordion"> <a class="dropdown" href="#">
                 <iframe src="http://player.vimeo.com/video/17346698?portrait=0" width="260" height="150" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                 </a>
-                <div> Environment Design: Rocco's sketchy pizza paror</div>
+                <div> Environment Design: Rocco's sketchy pizza parlor</div>
               </div>
               <div class="accordion"> <a class="dropdown" href="#">
                 <iframe src="http://player.vimeo.com/video/23077337?portrait=0" width="260" height="195" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
@@ -147,14 +147,14 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/brush.jpg" target="_blank"><img type="image/jpeg" src="images/brush-thumb.jpg" width="250" height="340"> </a>
-                <div> Modeled in Rhino, Textured in keyshot </div>
+                <div> Modeled in Rhino, textured in KeyShot </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"><a href = "images/chairs.jpg" target="_blank"> <img type="image/jpeg" src="images/chairs-thumb.jpg" width="250" height="340"> </a>
-                <div> Modeled in rhino, textured in keyshot </div>
+                <div> Modeled in Rhino, textured in KeyShot </div>
               </div>
             </div>
           </div>
@@ -171,21 +171,21 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/dollhouse.jpg" target="_blank"><img type="image/jpeg" src="images/dollhouse-thumb.jpg" width="250" height="190"> </a>
-                <div> Interactive dollhouse made from lasercut acryllic. House would light up based on Arduino sensory input</div>
+                <div> Interactive dollhouse made from lasercut acrylic. House would light up based on Arduino sensory input</div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"><a href = "images/fence.jpg" target="_blank"> <img type="image/jpeg" src="images/fence-thumb.jpg" width="250" height="190"> </a>
-                <div> Dollhouse fences (see left). Lasercut acryllic. Model taken from a LIDAR 3d scan of a campus building and converted to 3d mesh </div>
+                <div> Dollhouse fences (see left). Lasercut acrylic. Model taken from a LIDAR 3D scan of a campus building and converted to 3D mesh </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/exoegg.jpg" target="_blank"><img type="image/jpeg" src="images/exoegg-thumb.jpg" width="250" height="190"> </a>
-                <div> 3D printed sculpture. Designed in rhino, hollow. displayed at Tempe History Museum in 2012</div>
+                <div> 3D printed sculpture. Designed in Rhino, hollow. Displayed at Tempe History Museum in 2012</div>
               </div>
             </div>
           </div>
@@ -195,21 +195,21 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/elf.jpg" target="_blank"><img type="image/jpeg" src="images/elf-thumb.jpg" width="250" height="190"> </a>
-                <div> Elf head, modeled in maya. Custom shader </div>
+                <div> Elf head, modeled in Maya. Custom shader </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/headphones.jpg" target="_blank"><img type="image/jpeg" src="images/headphones-thumb.jpg" width="250" height="190"> </a>
-                <div> Modeled in rhino, textured in keyshot, post in Photoshop </div>
+                <div> Modeled in Rhino, textured in KeyShot, post in Photoshop </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/bed.jpg" target="_blank"><img type="image/jpeg" src="images/bed-thumb.jpg" width="250" height="190"> </a>
-                <div> "Dream Vortex". Lasercut masonite. Model in Rhino converted to connected 2d planes. Glows in the dark!</div>
+                <div> "Dream Vortex". Lasercut masonite. Model in Rhino converted to connected 2D planes. Glows in the dark!</div>
               </div>
             </div>
           </div>
@@ -219,7 +219,7 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/house.jpg" target="_blank"><img type="image/jpeg" src="images/house-thumb.jpg" width="250" height="190"> </a>
-                <div> 3d house, inserted into background image in post. Maya, Photoshop </div>
+                <div> 3D house, inserted into background image in post. Maya, Photoshop </div>
               </div>
             </div>
           </div>
@@ -252,10 +252,10 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mirror.jpg" target="_blank"><img type="image/jpeg" src="images/mirror-thumb.jpg" width="250" height="190"> </a>
-                <div> Light and Mirrors game. Interactive game projected onto the floor. Students can move mirros via motion capture to learn about light physics. </div>
+                <div> Light and Mirrors game. Interactive game projected onto the floor. Students can move mirrors via motion capture to learn about light physics. </div>
                 </a></div>
               <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mystery.jpg" target="_blank"><img type="image/jpeg" src="images/mystery-thumb.jpg" width="250" height="190"> </a>
-                <div> Interactive Murdery Mystery. Objects in the scene could be scanned into the computer, which then played an animation from that item's past as clues to solve the murder! Click here to see more about the project (under construction) </div>
+                <div> Interactive Murdery Mystery. Objects in the scene could be scanned into the computer, which then play an animation from that item's past as clues to solve the murder! Click here to see more about the project (under construction) </div>
               </div>
             </div>
           </div>
