--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <link type="text/css" rel="stylesheet" href="css/noscript.css" />
     </noscript>
 
-    <script type="text/javascript" src="js/jquery.min.js" defer></script>
-    <script type="text/javascript" src="js/config.js" defer></script>
-    <script type="text/javascript" src="js/skel.min.js" defer></script>
-    <script type="text/javascript" src="js/modernizr.js" defer></script>
+    <script type="text/javascript" src="js/jquery.min.js" ></script>
+    <script type="text/javascript" src="js/config.js" ></script>
+    <script type="text/javascript" src="js/skel.min.js" ></script>
+    <script type="text/javascript" src="js/modernizr.js" ></script>
 
     <style>
         img 
